--- a/StrikingInvestigation/Pages/Account.razor
+++ b/StrikingInvestigation/Pages/Account.razor
@@ -1,11 +1,11 @@
 ﻿@page "/Account"
 
-    <div class="ml-3 mt-3">
-        <h1>Account</h1>
+<div class="container mx-0 mx-md-2 my-1 my-md-3">
+    <h1>Account</h1>
 
-        <br />
+    <br />
 
-        <p style="max-width: 800px">
-            This page will be where users log in and maintain their accounts.
-        </p>
-    </div>
+    <p style="max-width: 800px">
+        This page will be where users log in and maintain their accounts.
+    </p>
+</div>
