--- a/StrikingInvestigation/Pages/Index.razor
+++ b/StrikingInvestigation/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<div class="ml-3 mt-3">
+<div class="container mx-0 mx-md-2 my-1 my-md-3">
     <h1>Striking Investigation</h1>
 
     <br />
