--- a/StrikingInvestigation/Pages/GapTest.razor
+++ b/StrikingInvestigation/Pages/GapTest.razor
@@ -291,11 +291,22 @@
                      GapDisabled="@controlsDisabled"
                      Callback="GapChangedWithButton" />
 
-            <PlayBtn Blow="@blowSet.Blows.Last()"
-                     Screen="@screen"
-                     PlayLabel="@playLabel"
-                     PlayDisabled="@playDisabled"
-                     Callback="Play" />
+            if (Device.DeviceLoad == DeviceLoad.Low)
+            {
+                <PlayBtn Blow="@blowSet.Blows.Last()"
+                         Screen="@screen"
+                         PlayLabel="@playLabel"
+                         PlayDisabled="@playDisabled"
+                         Callback="Play" />
+            }
+            else
+            {
+                <PlayBtn Blow="@blowSet.Blows.Last()"
+                         Screen="@screen"
+                         PlayLabel="@playLabel"
+                         PlayDisabled="@playDisabled"
+                         Callback="PlayAsync" />
+            }
 
             @if (spinnerPlaying == true)
             {
