Tidied up browser dimensions retrieval

--- a/StrikingInvestigation/Pages/Privacy.razor
+++ b/StrikingInvestigation/Pages/Privacy.razor
@@ -9,4 +9,14 @@
         This page will explain how striking result data submitted to the central server will be used, and how
         the user's privacy will be protected.
     </p>
+
+    <br />
+
+    <p>
+        Page width: @browserWidth px
+    </p>
+
+    <p>
+        Page height: @browserHeight px
+    </p>
 </div>
