Initial version of screen resizing now implemented for gap test

--- a/StrikingInvestigation/Shared/Bell.razor
+++ b/StrikingInvestigation/Shared/Bell.razor
@@ -1,8 +1,10 @@
 ﻿<div class="bell"
-        style="--color: @Blow.BellColor;
-        --leftpos: @LeftPos;
-        --toppos: @TopPos;
-        --diameter: @DiameterStr;
-        --padding: @Padding">
+        style="--borderwidth: @borderWidthStr;
+        --color: @Blow.BellColor;
+        --leftpos: @leftPosStr;
+        --toppos: @topPosStr;
+        --diameter: @diameterStr;
+        --fontsize: @fontSizeStr;
+        --padding: @paddingStr">
     @Blow.Bell
 </div>
