--- a/StrikingInvestigation/Pages/GapTest.razor
+++ b/StrikingInvestigation/Pages/GapTest.razor
@@ -3,6 +3,8 @@
 @using StrikingInvestigation.Utilities
 
 <div class="container mx-0 mx-md-2 my-1 my-md-3">
+    <div style="float: right">(@browserWidth, @browserHeight)</div>
+
     <h1>Gap Test</h1>
 
     <p>Adjust the test bell until you think it is striking at the correct time.</p>
@@ -232,108 +234,102 @@
             </div>
         }
     }
+</div>
 
-    <div style="position: relative" tabindex="0" @onkeydown="ArrowKeys" @ref="mainDiv">
-        @if (blowSet != null)
+<div style="position: relative" tabindex="0" @onkeydown="ArrowKeys" @ref="mainDiv">
+    @if (blowSet != null)
+    {
+        @foreach (Blow blow in blowSet.Blows)
         {
-            @foreach (Blow blow in blowSet.Blows)
+            // Place labels if it's the first blow of the row
+            if (blow.Place == 1)
             {
-                // Place labels if it's the first blow of the row
-                if (blow.Place == 1)
-                {
-                    <StrokeLabel Blow="@blow"
-                                 Screen="@screen" />
-
-                    <RowStartLabel Blow="@blow"
-                                   Screen="@screen" />
-
-                    <ChangeLabel Blow="@blow"
-                                 Screen="@screen" />
-                }
-
-                if (blow != blowSet.Blows.Last())
-                {
-                    <Bell Blow="@blow"
-                          Screen="@screen" />
-
-                    if (showGaps == true)
-                    {
-                        <GapLabel Blow="@blow"
-                                  Screen="@screen" />
-                    }
-                }
-                else
-                {
-                    <div @onmousedown="TestBellMouseDown" @onmousemove="TestBellMouseMove">
-                        <Bell Blow="@blow"
-                              Screen="@screen" />
-                    </div>
-                }
-
-                <audio id="@blow.AudioId" preload="auto">
-                    <source src="@blow.BellSound" type="audio/mpeg" />
-                </audio>
+                <StartOfRowLabel Blow="@blow"
+                                Screen="@screen" />
             }
 
-            <BoundaryLabel Blow="@blowSet.Blows.Last()"
-                           Screen="@screen" />
-
-            <GapMinus Blow="@blowSet.Blows.Last()"
-                      Screen="@screen"
-                      GapDisabled="@controlsDisabled"
-                      Callback="GapChangedWithButton" />
-
-            <GapCurr Blow="@blowSet.Blows.Last()"
-                     Screen="@screen" />
-
-            <GapPlus Blow="@blowSet.Blows.Last()"
-                     Screen="@screen"
-                     GapDisabled="@controlsDisabled"
-                     Callback="GapChangedWithButton" />
-
-            if (Device.DeviceLoad == DeviceLoad.Low)
+            if (blow != blowSet.Blows.Last())
             {
-                <PlayBtn Blow="@blowSet.Blows.Last()"
-                         Screen="@screen"
-                         PlayLabel="@playLabel"
-                         PlayDisabled="@playDisabled"
-                         Callback="Play" />
+                <Bell Blow="@blow"
+                        Screen="@screen" />
+
+                if (showGaps == true)
+                {
+                    <GapLabel Blow="@blow"
+                                Screen="@screen" />
+                }
             }
             else
             {
-                <PlayBtn Blow="@blowSet.Blows.Last()"
-                         Screen="@screen"
-                         PlayLabel="@playLabel"
-                         PlayDisabled="@playDisabled"
-                         Callback="PlayAsync" />
+                <div @onmousedown="TestBellMouseDown" @onmousemove="TestBellMouseMove">
+                    <Bell Blow="@blow"
+                            Screen="@screen" />
+                </div>
             }
 
-            @if (spinnerPlaying == true)
-            {
-                <SpinnerPlay Blow="@blowSet.Blows.Last()"
-                             Screen="@screen" />
-            }
-
-            @if (selectedTest != 0 && selectedTest != -1)
-            {
-                <SubmitBtn Blow="@blowSet.Blows.Last()"
-                           Screen="@screen"
-                           SubmitLabel="@submitLabel"
-                           SubmitDisabled="@controlsDisabled"
-                           Callback="Submit" />
-            }
-
-            @if (spinnerSubmitting == true)
-            {
-                <SpinnerSubmit Blow="@blowSet.Blows.Last()"
-                               Screen="@screen" />
-            }
-
-            @if (submitted == true)
-            {
-                <SubmitLabel Blow="@blowSet.Blows.Last()"
-                             Screen="@screen" />
-            }
+            <audio id="@blow.AudioId" preload="auto">
+                <source src="@blow.BellSound" type="audio/mpeg" />
+            </audio>
         }
-    </div>
+
+        <BoundaryLabel Blow="@blowSet.Blows.Last()"
+                        Screen="@screen" />
+
+        <GapMinus Blow="@blowSet.Blows.Last()"
+                    Screen="@screen"
+                    GapDisabled="@controlsDisabled"
+                    Callback="GapChangedWithButton" />
+
+        <GapCurr Blow="@blowSet.Blows.Last()"
+                    Screen="@screen" />
+
+        <GapPlus Blow="@blowSet.Blows.Last()"
+                    Screen="@screen"
+                    GapDisabled="@controlsDisabled"
+                    Callback="GapChangedWithButton" />
+
+        if (Device.DeviceLoad == DeviceLoad.Low)
+        {
+            <PlayBtn Blow="@blowSet.Blows.Last()"
+                        Screen="@screen"
+                        PlayLabel="@playLabel"
+                        PlayDisabled="@playDisabled"
+                        Callback="Play" />
+        }
+        else
+        {
+            <PlayBtn Blow="@blowSet.Blows.Last()"
+                        Screen="@screen"
+                        PlayLabel="@playLabel"
+                        PlayDisabled="@playDisabled"
+                        Callback="PlayAsync" />
+        }
+
+        @if (spinnerPlaying == true)
+        {
+            <SpinnerPlay Blow="@blowSet.Blows.Last()"
+                            Screen="@screen" />
+        }
+
+        @if (selectedTest != 0 && selectedTest != -1)
+        {
+            <SubmitBtn Blow="@blowSet.Blows.Last()"
+                        Screen="@screen"
+                        SubmitLabel="@submitLabel"
+                        SubmitDisabled="@controlsDisabled"
+                        Callback="Submit" />
+        }
+
+        @if (spinnerSubmitting == true)
+        {
+            <SpinnerSubmit Blow="@blowSet.Blows.Last()"
+                            Screen="@screen" />
+        }
+
+        @if (submitted == true)
+        {
+            <SubmitLabel Blow="@blowSet.Blows.Last()"
+                            Screen="@screen" />
+        }
+    }
 </div>
